# minecraft-remapper

./: .gitignore  Pipfile  README.md  pyproject.toml  remapper.py  setup.py
minecraft_remapper/: __init__.py  __main__.py  remapper.py
