[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "minecraft_remapper"
author = "Nearata"
author-email = "nearata@protonmail.com"
home-page = "https://github.com/Nearata/minecraft-remapper"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9"
]
description-file = "README.md"
requires = [
    "click ==8.0.1",
    "colorama ==0.4.4"
]
requires-python = ">=3.9"

[tool.isort]
profile = "black"
